--- a/style.css
+++ b/style.css
@@ -1,15 +1,11 @@
 body{
-    margin: auto 0;
+    margin: 0;
+    padding: 0;
     font-family: Impact, Charcoal, sans-serif;
 }
 
-
 .zone {
-    /*padding:30px 50px;
-    margin:40px 60px;
-    */
-    cursor:pointer;
-    /*display:inline-block;*/
+    cursor: default;
     color:#FFF;
     font-size:2em;
     border-radius:4px;
@@ -33,6 +29,43 @@ body{
 /* NAV */
 /* ========================================================= */
 
+/* Improved Code */
+
+#navbar{
+    width: 100%;
+    position: fixed;
+    background-color: white;
+    box-shadow: 2px 1px 5px black;
+    z-index: 1000;
+}
+
+#navbar ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+}
+
+#navbar ul li{
+    margin: 0;
+}
+
+#navbar ul li a{
+    text-decoration: none;
+    padding: 2rem 1.5rem;
+    color: black;
+    transition: ease-in-out 0.3s;
+}
+
+#navbar ul li a:hover{
+    background-color: blueviolet;
+    color: white;
+}
+
+/* Default Code
+
 .sticky{
     position: fixed;
     top: 0;
@@ -51,7 +84,6 @@ body{
     .main-nav{
         font-size: 0.5em;
         padding: 0;
-       
     }
 }
 
@@ -71,10 +103,33 @@ a{
 
 .pushright{
     margin-left: auto;
-}
+} */
 
 /* Cover */
 /* ========================================================= */
+
+/* Improved Code */
+
+.container{
+    padding-top: 75px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.context h1{
+    font-size: 3rem;
+    text-align: center;
+}
+
+.container img{
+    width: 75vw;
+}
+
+/* Default Code 
 .container{
   
     display: flex;
@@ -89,7 +144,7 @@ a{
 }
 .cover{
     width: 25rem ;
-}
+} */
 
 /* Project Grid */
 /* ========================================================= */
@@ -117,15 +172,28 @@ a{
 footer{
     text-align: center;
     font-family: Arial;
-    font-size: 1em !important;
+    /* font-size: 1em !important; */
     padding-top: 1rem;
     padding-bottom: 1rem;
-
 }
 
+.footer{
+    font-size: 1.5rem;
+    background-color: rgb(49, 49, 49);
+    color: white;
+}
 
+.footer a{
+    text-decoration: none;
+    color: white;
+    padding: 1rem 0.5rem;
+}
 
+.footer a:hover{
+    color: black;
+    background-color: white;
 
+}
 
 /*https://paulund.co.uk/how-to-create-shiny-css-buttons*/
 /***********************************************************************
@@ -144,9 +212,9 @@ footer{
 
 
 
-/***********************************************************************
- *  Red Background
- **********************************************************************/
+/***************** 
+Red Background 
+******************/
 .red{
     background: #C655BE; /* Old browsers */
     background: -moz-linear-gradient(top, #C655BE 0%, #cf0404 100%); /* FF3.6+ */
@@ -157,9 +225,9 @@ footer{
     background: linear-gradient(top, #C655BE 0%,#cf0404 100%); /* W3C */
 }
 
-/***********************************************************************
- *  Yellow Background
- **********************************************************************/
+/***************** 
+Yellow Background 
+******************/
 .yellow{
     background: #F3AAAA; /* Old browsers */
     background: -moz-linear-gradient(top, #F3AAAA 0%, #febf04 100%); /* FF3.6+ */
@@ -170,9 +238,10 @@ footer{
     background: linear-gradient(top, #F3AAAA 0%,#febf04 100%); /* W3C */
 }
 
-/***********************************************************************
- *  Blue Background
- **********************************************************************/
+/***************** 
+Blue Background 
+******************/
+
 .blue{
     background: #7abcff; /* Old browsers */
     background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
